# PuertoRicoBoardgame

./: .gitignore  PuertoRico.pro  resources.qrc
headers/: card.hpp  dragwidget.hpp  mainform.hpp  mainwidget.hpp  opponent.hpp  rnd.hpp  tokens.hpp  tokenslot.hpp
projects/cmake/: CMakeLists.txt
src/: card.cpp  dragwidget.cpp  main.cpp  mainform.cpp  mainwidget.cpp  opponent.cpp  rnd.cpp  tokens.cpp  tokenslot.cpp
ui/: MainForm.ui  MainWidget.ui
